cp project/force-app/main/default/objects/CP_Notification__c/CP_Notification__c.object-meta.xml
<CustomObject>
    <label>CP Notification</label>
    <pluralLabel>CP Notifications</pluralLabel>
    <nameField>
        <label>CP Notification Name</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>