cp project/force-app/main/default/objects/CP_Notification__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>Follow Up</label>
    <type>Lookup</type>
    <referenceTo>Follow_Up__c</referenceTo>
    <relationshipLabel>CP Notifications</relationshipLabel>
    <relationshipName>CP_Notifications</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>