cp project/force-app/main/default/objects/CP_Notification__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CP Notifications</relationshipLabel>
    <relationshipName>CP_Notifications</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>