cp project/force-app/main/default/objects/CP_Notification__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Registration</fullName><default>false</default><label>Registration</label></value>
            <value><fullName>Document Rejected</fullName><label>Document Rejected</label></value>
            <value><fullName>Document Verified</fullName><label>Document Verified</label></value>
            <value><fullName>CP Approved</fullName><label>CP Approved</label></value>
            <value><fullName>Password Changed</fullName><label>Password Changed</label></value>
            <value><fullName>Lead Created</fullName><label>Lead Created</label></value>
            <value><fullName>Lead Updated</fullName><label>Lead Updated</label></value>
            <value><fullName>Lead Status Changed</fullName><label>Lead Status Changed</label></value>
            <value><fullName>Site Visit</fullName><label>Site Visit</label></value>
            <value><fullName>Follow Up</fullName><label>Follow Up</label></value>
            <value><fullName>Project Update</fullName><label>Project Update</label></value>
            <value><fullName>Unit Update</fullName><label>Unit Update</label></value>
            <value><fullName>Company Announcement</fullName><label>Company Announcement</label></value>
            <value><fullName>Salesforce Sync Failed</fullName><label>Salesforce Sync Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>