cp project/force-app/main/default/objects/CP_Notification__c/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <label>Site Visit</label>
    <type>Lookup</type>
    <referenceTo>Site_Visit__c</referenceTo>
    <relationshipLabel>CP Notifications</relationshipLabel>
    <relationshipName>CP_Notifications</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>